// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StatsDisplay /> > Code Changes Display > displays Code Changes when line counts are present 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 1 ( ✓ 1 x 0 )                                                       │
│  Success Rate:               100.0%                                                              │
│  Code Changes:               +42 -18                                                             │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               100ms                                                               │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              100ms (100.0%)                                                      │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Code Changes Display > hides Code Changes when no lines are added or removed 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 1 ( ✓ 1 x 0 )                                                       │
│  Success Rate:               100.0%                                                              │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               100ms                                                               │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              100ms (100.0%)                                                      │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in green for high values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 10 ( ✓ 10 x 0 )                                                     │
│  Success Rate:               100.0%                                                              │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in red for low values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 10 ( ✓ 5 x 5 )                                                      │
│  Success Rate:               50.0%                                                               │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in yellow for medium values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 10 ( ✓ 9 x 1 )                                                      │
│  Success Rate:               90.0%                                                               │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Rendering Tests > hides Efficiency section when cache is not used 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               100ms                                                               │
│    » API Time:               100ms (100.0%)                                                      │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                  Reqs   Input Tokens  Output Tokens                                 │
│  ───────────────────────────────────────────────────────────────                                 │
│  gemini-2.5-pro                  1            100            100                                 │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Rendering Tests > hides User Agreement when no decisions are made 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 2 ( ✓ 1 x 1 )                                                       │
│  Success Rate:               50.0%                                                               │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               123ms                                                               │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              123ms (100.0%)                                                      │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Quota Display > does not render quota section when quotaLines are not provided 1`] = `
"
  ERROR  RuntimeContextProvider is missing from the component tree.

 src/ui/contexts/RuntimeContext.tsx:182:11

 179: export function useRuntimeBridge(): RuntimeContextBridge {
 180:   const context = useContext(RuntimeContext);
 181:   if (!context) {
 182:     throw new Error(
 183:       'RuntimeContextProvider is missing from the component tree.',
 184:     );
 185:   }

 - useRuntimeBridge (src/ui/contexts/RuntimeContext.tsx:182:11)
 - useRuntimeApi (src/ui/contexts/RuntimeContext.tsx:190:10)
 - StatsDisplay (src/ui/components/StatsDisplay.tsx:171:19)
 -Object.react-stack-bott
  m-frame                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-r
                         econciler/cjs/react-reconciler.development.js:15859:20)
 -renderWithHoo
  s            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/
               cjs/react-reconciler.development.js:3221:22)
 -updateFunctionComp
  nent              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconc
                    iler/cjs/react-reconciler.development.js:6475:19)
 -beginWor
          (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cjs/r
          eact-reconciler.development.js:8009:18)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12834:22)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
"
`;

exports[`<StatsDisplay /> > Quota Display > handles empty quotaLines gracefully 1`] = `
"
  ERROR  RuntimeContextProvider is missing from the component tree.

 src/ui/contexts/RuntimeContext.tsx:182:11

 179: export function useRuntimeBridge(): RuntimeContextBridge {
 180:   const context = useContext(RuntimeContext);
 181:   if (!context) {
 182:     throw new Error(
 183:       'RuntimeContextProvider is missing from the component tree.',
 184:     );
 185:   }

 - useRuntimeBridge (src/ui/contexts/RuntimeContext.tsx:182:11)
 - useRuntimeApi (src/ui/contexts/RuntimeContext.tsx:190:10)
 - StatsDisplay (src/ui/components/StatsDisplay.tsx:171:19)
 -Object.react-stack-bott
  m-frame                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-r
                         econciler/cjs/react-reconciler.development.js:15859:20)
 -renderWithHoo
  s            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/
               cjs/react-reconciler.development.js:3221:22)
 -updateFunctionComp
  nent              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconc
                    iler/cjs/react-reconciler.development.js:6475:19)
 -beginWor
          (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cjs/r
          eact-reconciler.development.js:8009:18)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12834:22)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
"
`;

exports[`<StatsDisplay /> > Title Rendering > renders the custom title when a title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Agent powering down. Goodbye!                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Title Rendering > renders the default title when no title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > renders a table with two models correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               19.5s                                                               │
│    » API Time:               19.5s (100.0%)                                                      │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                  Reqs   Input Tokens  Output Tokens                                 │
│  ───────────────────────────────────────────────────────────────                                 │
│  gemini-2.5-pro                  3          1,000          2,000                                 │
│  gemini-2.5-flash                5         25,000         15,000                                 │
│                                                                                                  │
│  Savings Highlight: 10,500 (40.4%) of input tokens were served from the cache, reducing costs.   │
│                                                                                                  │
│  » Tip: For a full token breakdown, run \`/stats model\`.                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > renders all sections when all data is present 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Interaction Summary                                                                             │
│  Session ID:                 test-session-id                                                     │
│  Tool Calls:                 2 ( ✓ 1 x 1 )                                                       │
│  Success Rate:               50.0%                                                               │
│  User Agreement:             100.0% (1 reviewed)                                                 │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               223ms                                                               │
│    » API Time:               100ms (44.8%)                                                       │
│    » Tool Time:              123ms (55.2%)                                                       │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
│  Model Usage                  Reqs   Input Tokens  Output Tokens                                 │
│  ───────────────────────────────────────────────────────────────                                 │
│  gemini-2.5-pro                  1            100            100                                 │
│                                                                                                  │
│  Savings Highlight: 50 (50.0%) of input tokens were served from the cache, reducing costs.       │
│                                                                                                  │
│  » Tip: For a full token breakdown, run \`/stats model\`.                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > renders only the Performance section in its zero state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Session Stats                                                                                   │
│                                                                                                  │
│  Performance                                                                                     │
│  Wall Time:                  1s                                                                  │
│  Agent Active:               0s                                                                  │
│    » API Time:               0s (0.0%)                                                           │
│    » Tool Time:              0s (0.0%)                                                           │
│                                                                                                  │
│  Token Tracking                                                                                  │
│  Tokens Per Minute:          0                                                                   │
│  Throttle Wait Time:         0ms                                                                 │
│    » Session Token Usage: Session Tokens - Input: 0, Output: 0, Cache: 0, Tool: 0, Thought: 0,   │
│                           Total: 0                                                               │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
